# strictabc

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: workflow.yml
src/strictabc/: __init__.py  strict.py
tests/: test_strict_abstract.py
