[project]
name = "strictabc"
version = "1.0.2"
authors = [
  { name="Trevor Viken", email="trevor.viken@gmail.com" },
]
description = "A module containing the implementation of Strict ABC classes and decorators"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/taviken/strictabc"
Issues = "https://github.com/taviken/strictabc/issues"